--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>traction/TableMaths @ GitHub</title>
+  <title>TableMaths by Traction</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+<div id="container" class="container">
 {{content}}
+</div>
 </body>
 </html>
