--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,19 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>TableMaths by Traction</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+<div class="traction-sidenav">
+  <div class="logo-container">
+    <a href="https://tractionco.com"><img width="30" height="30" alt="Traction" src="assets/images/traction_bug.png" /></a>
+  </div>
+  <div class="logo-container-cutline"></div>
+</div>
 <div id="container" class="container">
 {{content}}
 </div>
