--- a/_sass/swatches.scss
+++ b/_sass/swatches.scss
@@ -12,3 +12,6 @@ $color-hr: #aaa;
 $bookmarklet-background: #626262;
 $bookmarklet-shadow: #3B3B3B;
 $bookmarklet-color: $swatch-white;
+
+// Media viewports
+$meida-small-max: 'max-width: 800px';
