--- a/_sass/traction-sidenav.scss
+++ b/_sass/traction-sidenav.scss
@@ -22,7 +22,7 @@ $traction-sidenav-border: #636362;
   .logo-container {
     background-color: $traction-sidenav-bg-01;
     padding: 24px 0 12px 2px;
-    @media (max-width: 800px) {
+    @media ($meida-small-max) {
       padding: 7px 0 0 10px;
     }
   }
@@ -35,7 +35,7 @@ $traction-sidenav-border: #636362;
     background-color: $traction-sidenav-bg-01;
     height: 24px;
 
-    @media (max-width: 800px) {
+    @media ($meida-small-max) {
       top: (-$traction-sidenav-width + 3);
       left: 66px;
       transform: skewX(-22deg);
@@ -46,7 +46,7 @@ $traction-sidenav-border: #636362;
     }
   }
 
-  @media (max-width: 800px) {
+  @media ($meida-small-max) {
     width: 100%;
     height: $traction-sidenav-width;
     text-align: left;
