* Moving TableMaths style to `_sass/` folder. * Use `swatches.scss` for TableMaths colors.

--- a/_sass/swatches.scss
+++ b/_sass/swatches.scss
@@ -2,6 +2,11 @@
 $swatch-black: #000;
 $swatch-white: #fff;
 
+// TableMaths Swatches
+$main-background: #ff9;
+$main-color: #000;
+$highlight-background: #9cf;
+
 // Assignments
 $color-background: #424242;
 $color-text: darken($swatch-white, 20%);
