--- a/assets/css/tablemaths.scss
+++ b/assets/css/tablemaths.scss
@@ -3,71 +3,5 @@
 
 // Used directly in TableMaths display.
 
-// Colors
-$main-background: #ff9;
-$main-color: #000;
-$highlight-background: #9cf;
-
-#tmhl {
-  display: none;
-  position: absolute;
-  opacity: .75;
-  z-index: 9999;
-  background-color: $highlight-background;
-}
-
-#tablemaths {
-  position: fixed;
-  top: 15px;
-  left: 15px;
-  z-index: 99999;
-  border: 1px solid $main-color;
-  background-color: $main-background;
-  cursor: move;
-  padding: 5px;
-  width: 450px;
-  overflow: hidden;
-  color: $main-color;
-  font-family: 'Lucida Grande', Helvetica, Arial;
-  font-size: 12px;
-  
-  h1 {
-    margin: 0 0 12px;
-    color: $main-color;
-    font-size: 18px;
-    font-weight: bold;
-    
-    small {
-      font-size: 12px;
-    }
-  }
-  
-  .tm-report {
-    font-weight: bold;
-  }
-  
-  .tm-report-element {
-    margin-bottom: 10px;
-    
-    .tm-report-heading {
-      font-weight: bold;
-    }
-  }
-
-  #tmrs {
-    position: absolute;
-    right: 5px;
-    bottom: 5px;
-    background-image: url('../../handle.png');
-    background-repeat: no-repeat;
-    background-size: 11px;
-    cursor: se-resize;
-    width: 11px;
-    height: 11px;
-  }
-
-  .tmhl-tag {
-    cursor: help;
-  }
-
-}
+@import 'swatches';
+@import 'tablemaths';
