* Adding Open Graph tags.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,14 @@
   <title>TableMaths by Traction</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/style.css">
+  <!-- Social Media Info -->
+  <link rel="publisher" href="https://plus.google.com/117650829871636122363"/>
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="{{site.github.url}}">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@Traction"/>
+  <meta property="og:title" content="TableMaths by Traction">
+  <meta property="og:description" content="A little JavaScript bookmarklet that looks through your code and lets you know when something ain't right.">
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js" integrity="sha384-KgEy7s3ThYKule8wWiu2WJkm0AmJeSLkXku5PY5X8MhVgdm8K1ebsVRKHfNfWPrR" crossorigin="anonymous"></script>
   <script src="assets/scripts/app.js"></script>
